--- a/index.qmd
+++ b/index.qmd
@@ -102,8 +102,6 @@ gemini_df <- read_csv(here::here("data/gemini_df.csv")) |> as_decision_tbl()
 
 # Introduction
 
-TODO: need references
-
 Decisions are made at every stage of data analysis, from initial data collection, pre-processing to modeling. One might expect well-trained researchers to make similar choices when faced with the same analytical task, yet evidence suggests otherwise. Many-analyst experiments show that independent analysts often arrive at markedly different conclusions, even when analyzing the same dataset to answer the same research question [@silberzahn2018; @botvinik-nezer2020; @gould2025]. This variation in analytical decision-making, described by @gelman2014 as the "garden of forking paths," can undermine the quality and credibility of reported results and hinder comparability across studies. For junior researchers who lack guidance, this variability may lead to over reliance on default statistical software settings or arbitrary choices made without clear justification.
 
 A common approach to investigate uncertainty in analytical decisions is sensitivity analysis, where researchers systematically vary key decisions in their analysis to assess the robustness of their findings. Multiverse analysis extends this idea by evaluating *all* plausible combinations of decision choices to examine how results vary across the full decision space [@multiverse; @blair2019]. However, what an analyst consider reasonable may not reflect the full range of options used in practice. Even when a reasonable set of alternatives is tested, the sensitivity analysis may be of limited interest to other researchers facing a similar problem, who are seeking evidence to inform comparable decision. Ideally, decision-making in applied research would be studied by following experienced analysts throughout the entire analysis process to capture their reasoning. In reality, this is rarely feasible and not scalable. While individual studies may not capture the full range of decision choices used in practice, crowdsourcing decisions from a collection of studies on a shared theme creates a "many-analyst" setting that reveals how analysts make choices and justify them in practice. Classic research training typically involves reading through the literature to learn the common choices and to understand how decisions are made. This process now has the possibility to be automated at scale given recent advance in information extraction with Large Language Models' (LLMs) [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024].
@@ -132,7 +130,7 @@ In summary, the contribution of this work includes:
 
 Data analysis is a complex and iterative process [@jun2022; @jun2022hypothesis; @jun2019] that involves multiple stages, including data collection, data cleaning, visualization, modeling, and communication. At each stage, analysts make decisions informed by domain practices, statistical knowledge, and the data. These decisions, such as which variables to include in a model, how to handle missing data, and how hyper-parameters are chosen, act as branching points in the analysis workflow. [TODO]The full set of possible paths through these branching points form what @gelman2014 describe as the "garden of forking paths". While one might expect well-trained researchers to make similar choices when facing similar decisions, empirical evidence suggests otherwise. "Many analyst experiments" show that independent research groups analyzing the same dataset to address the same research questions can arrive at widely different conclusions. For example, @silberzahn2018 asks 29 groups of analysts to conduct an analysis to address the same research questions *whether soccer players with dark skin tone are more likely than those with light skin tone to receive red cards from referees*. Researchers reported an estimated effect size from 0.89 to 2.93 in odds ratio with 21 unique combinations of covariates are used among all 29 analyses. 70% of the teams found a statistically significant positive effect while others don't. This great discrepancy among researchers when performing data analysis task is also observed in other domains, for example, structural equation modeling [@sarstedt2024], applied microeconomics [@huntington-klein2021], neuroimaging [@botvinik-nezer2020], and ecology and evolutionary biology [@gould2025].
 
-Examples like the above illustrate how analytical decisions introduce uncertainty into data analysis. These uncertainties have been widely discussed in the literature given their impact for policy recommendation [@APHENA] and \[TODO\] applications in health, finance, fairness machine learning [@simson2025]. Through experiments, research has shown that analysts' decisions can lead to p-hacking and inflated effect size, when not properly used [@wicherts2016; @simmons2011]. Hence, guidelines and checklists have been developed to recommend the best practice to guide statistical analysis. In medicine and biostatistics, pre-registration is a common practice to regulate analysts making decisions after seeing the data [@van2015]. Given the nuanced nature of data analysis, more work have examined how analysts make decisions in practice through interviews in both academia and industry. These studies include qualitative analysis of the decisions made [@kale2019; @liu2020], interviews with data analysts about exploratory data analysis practice in industry [@alspaugh2019; @kandel2012] and about how they consider alternatives in data analysis [@liu_understanding_2020].
+Examples like the above illustrate how analytical decisions introduce uncertainty into data analysis. These uncertainties have been widely discussed in the literature given their impact for policy recommendation [@APHENA] and \[TODO\] applications in health, finance, fairness machine learning [@simson2025]. Through experiments, research has shown that analysts' decisions can lead to p-hacking and inflated effect size, when not properly used [@wicherts2016; @simmons2011]. Hence, guidelines and checklists have been developed to recommend the best practice to guide statistical analysis. In medicine and biostatistics, pre-registration is a common practice to regulate analysts making decisions after seeing the data. Given the nuanced nature of data analysis, more work have examined how analysts make decisions in practice through interviews in both academia and industry. These studies include qualitative analysis of the decisions made [@kale2019; @liu2020], interviews with data analysts about exploratory data analysis practice in industry [@alspaugh2019; @kandel2012] and about how they consider alternatives in data analysis [@liu_understanding_2020].
 
 In addition to qualitative studies, software tools have developed to help researchers account for alternatives and uncertainties and make informed decisions in data analysis. Examples include `Tea` [@jun2019], which support general statistical analysis; `Tisane` [@jun2022], which guides choices in generalized linear mixed-effects models (GLMMs); and `MetaExplore` [@kale2023], which account for epistemic uncertainty (decision uncertainty) in meta-analysis. The `DeclareDesign` package [@blair2019] proposes the MIDA framework for researchers to declare, diagnose, and redesign their analyses with account for uncertainties of reporting the statistic of interest. Multiverse analysis proposes a different method to allow researchers to evaluate *all* plausible combinations of decision choices to examine how results vary in the full decision space. Work has been done on the software tools to support multiverse analysis [@multiverse; @götz2024] and visualization of multiverse results [@liu2021], and debugging tools [@gu2023].
 
@@ -697,40 +695,36 @@ We have conducted sensitivity analysis on the text model for calculating decisio
 
 # Discussion {#sec-discussion}
 
-The similarity metric we proposed focuses on the variation of choices across analyses, without directly assessing how those choices influence results. By pooling decision choices from multiple studies with LLMs, it becomes much easier to reveal common practices and difference in research practices, highlighting decisions that require further sensitivity analyses to assess their impact. The different smoothing methods revealed in @fig-mds are consistent with the analysis by @peng2006 and @touloumi2006 that compares different smoothing methods and rationale for selecting smoothing parameters.
-
 ## Large-language models for information extraction
 
-Numerous studies have demonstrated the capability of LLMs in information extraction across domains [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024]. Our work applies the LLMs to extract analytic decisions in scientific literature, providing further evidence of their effectiveness for information extraction task. Unlike named entity recognition (NER) in clinical data, our task requires capturing more complex analytical decisions and their justifications, which typically span more than just a few tokens. This also requires linking information across sentences and sometimes sections to correctly identify the variables (e.g., linking "weather" to "temperature" and "humidity").
+Numerous studies [@harrod2024; @katz2024; @farzi2024; @hu2024; @sciannameo2024; @gu2025; @schilling-wilhelmi2025; @gupta2024; @li2024; @baddour2024; @polak2024] have demonstrated the capability of LLMs for information extraction task. Our work applies the LLMs to extract analytic decisions in scientific literature, providing further evidence of their effectiveness for information extraction task. Our task requires capturing more complex analytical decisions and their justifications, which typically span more than just a few tokens like in named entity recognition. Our task also requires linking information across sentences and sometimes sections to correctly identify the variables of a decision (e.g., linking "weather" to "temperature" and "humidity"). While LLM has performed well on extracting decisions from the literature, manual validations are still required to ensure the quality of the extracted decisions for downstream analysis. Most existing applications evaluate LLMs by comparing their outputs to human-annotated datasets, reporting metrics such as precision, recall, and F1 score. Because this approach depends on labeled data and it is not yet clear how these outputs should be validated for downstream analysis in practice. In our work, we automate some of the manual validation with a secondary LLM (Claude) to standardize the temporal lag choices in different expression into two categories.
 
-While the extraction of decisions from literature could be largely automated with LLMs, manual validations remains essential to ensure the quality of the extracted decisions for downstream analysis. Most existing applications evaluate LLMs by comparing their outputs to human-annotated datasets, reporting metrics such as precision, recall, and F1 score. Because this approach depends on labeled data, which is not yet fully automated, it is not yet clear how these outputs should be validated for downstream analysis in practice. In our work, we automate some of the manual validation with a secondary LLM (Claude) to standardize the temporal lag choices into two categories: multi-day averages and single-day lags.
-
-With a default temperature of one and the prompt to instruct the model to extract the original text rather than paraphrase, we find that hallucination is not a major issue with Claude and Gemini in this application. Because LLM outputs are inherently probabilistic, we also conduct sensitivity analyses on reproducibility across runs and model providers. The output is generally stable: repeated runs with the Gemini produces consistent results, and different models extracted a similar number of decisions.
+With a default temperature of one and the prompt to instruct the model to extract the original text rather than paraphrase, we find that hallucination is not a major issue with Claude and Gemini in this application. Since LLM outputs are inherently probabilistic, we also conduct sensitivity analyses on reproducibility across runs and model providers. The output is generally stable: repeated runs with the Gemini produce consistent results, and different models extracted a similar number of decisions.
 
 While we optimize the prompt for decision extraction in this work, an alternative approach is to fine-tune a local model to enhance LLM performance. A catered local model could be useful for extraction decisions for a comprehensive literature reviews on a larger scale, but it would require greater model training efforts with labeled data.
 
 ## Extracting other types of decisions
 
-In this work, we focus on modeling decisions for the baseline model in the air pollution epidemiology literature. Analyses in this fields often fit multiple models for different health outcomes and secondary models, such as distributed lag models and multi-pollutant models, are also commonly used to estimate relative risks and multi-pollutants interactions. These increase the complexity of decision extraction with LLMs because authors often only describe the differences from the baseline specification, implicitly assuming other decisions remain unchanged. Hence, LLMs will need to link the decisions across different models and reconstruct the complete set of decisions for each model.
+In this work, we focus on modeling decisions for the baseline model in the air pollution epidemiology literature. Analyses in this field often fit multiple models for different health outcomes and use secondary models, such as distributed lag models and multi-pollutant models, to estimate relative risks and multi-pollutants interactions. These increase the complexity of decision extraction with LLMs because authors often only describe the differences from the baseline specification, implicitly assuming other decisions remain unchanged. Hence, LLMs will need to link the decisions across different models and reconstruct the complete set of decisions for each model.
 
-Beyond modeling choices, decisions in data pre-processing are also interesting to compare. For example, @braga2001 aggregated air pollution measures from multiple PM10 monitors within the same location into a single value. Choices about data source, aggregation, imputation, among others, could also have impact on uncertainty of the estimation. However, these decisions are often less well-documented in the literature than the modeling decisions, hence cannot be extracted by LLMs. Proper documentation and reporting of these decisions in future research are needed before our workflow could be applied to pre-processing decisions.
+Beyond modeling choices, decisions in data pre-processing are also interesting to compare. For example, @braga2001 aggregated air pollution measures from multiple PM10 monitors within the same location into a single value. Pre-processing choices such as data source, aggregation method, imputation, also have impact on uncertainty of the estimated effect size of particulate matters. However, these decisions are often not properly and adequately described in the manuscript, making it impossible to extract by LLMs. Proper documentation and reporting standard of in pre-processing decisions are needed before our workflow could be applied to pre-processing decisions.
 
-With growing advocacy for reproducibility, papers nowadays are expected to share code and data, if applicable. Code availability provides a useful supplementary source for identifying decisions and cross-checking them against manuscript description. However, while script may reveal what choices were made, the rationale behind these choices is often not documented under the current practice.
+With growing advocacy for reproducibility, papers nowadays are expected to share code and data, if applicable. Code availability provides a useful supplementary source for identifying decision choices and cross-checking them against descriptions in the  manuscript. However, while script may reveal what choices were made, the rationale behind these choices are often not documented under the current practice.
 
 <!-- Spatial decisions are generally not well captured because it often conducted uniformly as estimating the city individually to accommodate city heterogeneity. Some papers only consider a handful of cities, while in larger studies the individual city effects are then pooled together using random effect. -->
 
 ## Generalizability of the workflow
 
-In principle, our workflow is scalable and generalizable to a random set of applied papers. However, insights about the data analysis practices are more likely to emerge when papers share certain similarities. For example literature on the same topic but authored by different researchers enables comparisons of practices within a field; literature that use the same methodology across disciplines allow comparisons across fields; and literature that considers the same variables can show how those variables are used in different domains.
+In principle, our workflow is scalable and generalizable to a random set of applied papers. However, insights about the data analysis practices are more likely to be reveals when papers share certain similarities. For example literature on the same topic but different authors allows for understanding of common practices within a field, literature using the same methodology across different disciplines allow comparisons of the same statistical method across fields; and literature that considers the same variables can show how those variables are used in different domains.
 
-The LLM prompt for extracting decisions will need to be customized for each application of the workflow. The general LLM prompt structure and the data schema for recording decisions can be retained, while examples within the prompt may be adapted to suit the specific application. The shiny application for interactively validating and standardizing decisions can be reused across applications. Calculating paper similarity requires comparing decisions on the same variable and type across paper pairs. For papers with limited similarities, the number of comparable decisions may be limited. Diagnostic functions are available to display decisions side by side or provide summary statistics on the number of comparable decisions. Uncertainty visualization could be used to highlight the confidence in the similarity metric based on the number of comparable decisions.
+Our LLM prompt for extracting decisions will need to be customized for each application of the workflow. The general prompt structure and the data schema for recording decisions can be reused, while examples within the prompt may be adapted to suit the specific application. The shiny application for interactively validating and standardizing decisions can be reused across applications. Calculating paper similarity requires comparing decisions on the same variable and type across paper pairs. For papers with limited similarities, the number of comparable decisions may be limited. Diagnostic functions are available to display decisions side by side or provide summary statistics on the number of comparable decisions. Uncertainty visualization on the paper similarity score can be used to highlight the confidence with respect to the number of comparable decisions.
 
 As a new method for collecting analytic decision data from literature, our workflow can be connected to meta-analysis to assess how different decisions influence results. More broadly, it can also be integrated into literature search and recommender systems to suggest similar papers based on the analytic decisions they employ.
 
 # Conclusion {#sec-conclusion}
 
-In this paper, we aim to study how analysts make decisions in their data analysis practice. While classic interviews are often conducted in small scale with toy examples, we developed a pipeline for automatically extracting decisions using LLMs (Claude and Gemini) from scientific literature. We also introduced a method for calculating paper similarity through comparing the similarities among decisions and the similarity metric can be used as a distance to cluster papers by their decision choices and visualization with dimension reduction algorithms, such as multidimensional scaling. We applied this pipeline to a set of air pollution modeling literature that associates daily particulate matter and daily mortality and hospital admission. From the extracted modeling decisions, we identify the most common decision choices in this type of analysis and the paper similarity score calculation revealed the three clusters of paper corresponding to different modeling strategies. These findings are all consistent with the general understanding of the field, as documented in the APHENA project [@APHENA] and other methodological comparison studies [@peng2006; @touloumi2006].
+In this paper, we developed a scalable and generalizable pipeline for automatically extracting analytical decisions using LLMs from scientific literature to study how analysts make decisions in data analysis. We also introduced a method for calculating paper similarity through comparing the similarities among decision choices and the similarity metric can be used as a distance to cluster papers by their decision choices and visualization with dimension reduction algorithms, such as multidimensional scaling. We applied this pipeline to a set of air pollution modeling literature that associates daily particulate matter and daily mortality and hospital admission. From the extracted modeling decisions, we identify the most common decision choices in this type of analysis and the paper similarity score calculation revealed the three clusters of paper corresponding to different smoothing methods. 
 
-While sensitivity analyses are commonly used to assess the robustness of findings to different analytical choices, the set of choices tested is often limited and selected subjectively by the authors. Our approach offers a new perspective by pooling decisions made in analyses across studies in the fields. This allows for a holistic account on the alternatives in the field and identification of both consensus and divergence within the field, providing insights for future research and methodological development.
+Many work on studying decision-making in data analysis conduct qualitative interviews with a small number of analysts to understand their decision-making process. "many-analysts" studies gather together analysts in a controlled experiment to observe analysts conduct the analysis. Our approach is also observational in nature, but we "observe" analysts in real world problems with real data that have policy implication, while being scalable and cost-effective to a broader exploration of decision-making practices in different contexts and disciplines. Compared to sensitivity analysis or multiverse analysis, our approach offers a different perspective by pooling together decisions made in analyses across the field to reveal the options considered to highlight uncertainty in decisions that require further sensitivity analyses to assess their impact [@peng2006; @touloumi2006].
 
 # References {.unnumbered}
