--- a/index.tex
+++ b/index.tex
@@ -226,8 +226,8 @@ alternative to existing qualitative and interview-based studies.
 \end{abstract}
 \begin{keywords}
 \def\sep{;\ }
-decision choice, data analysis, Large Language Models\sep 
-decision choice, data analysis, Large Language Models
+decision choice\sep data analysis\sep 
+Large Language Models
 \end{keywords}
 
 
@@ -1380,9 +1380,9 @@ Louis 2006; Touloumi et al. 2006).
 
 \section{Acknowledgement}\label{acknowledgement}
 
-The article has been created using Quarto
-(\textbf{Allaire\_Quarto\_2022?}) in R (\textbf{R?}). The source code
-for reproducing the work reported in this paper can be found at:
+The article has been created using Quarto (Allaire et al. 2022) in R (R
+Core Team 2025). The source code for reproducing the work reported in
+this paper can be found at:
 \url{https://github.com/huizezhang-sherry/paper-decisions}.
 
 \section*{References}\label{references}
@@ -1395,6 +1395,11 @@ Alexander, Eric, Joe Kohlmann, Robin Valenza, Michael Witmore, and
 Michael Gleicher. 2014. {``2014 IEEE Conference on Visual Analytics
 Science and Technology (VAST).''} In, 173--82.
 \url{https://doi.org/10.1109/VAST.2014.7042493}.
+
+\bibitem[\citeproctext]{ref-Allaire_Quarto_2022}
+Allaire, J. J., C. Teague, C. Scheidegger, Y. Xie, and C. Dervieux.
+2022. \emph{{Quarto}} (version 1.2).
+\url{https://doi.org/10.5281/zenodo.5960048}.
 
 \bibitem[\citeproctext]{ref-alspaugh2019}
 Alspaugh, Sara, Nava Zokaei, Andrea Liu, Cindy Jin, and Marti A. Hearst.
@@ -1788,6 +1793,11 @@ Polak, Maciej P., and Dane Morgan. 2024. {``Extracting Accurate
 Materials Data from Research Papers with Conversational Language Models
 and Prompt Engineering.''} \emph{Nature Communications} 15 (1): 1569.
 \url{https://doi.org/10.1038/s41467-024-45914-8}.
+
+\bibitem[\citeproctext]{ref-R}
+R Core Team. 2025. \emph{R: A Language and Environment for Statistical
+Computing}. Vienna, Austria: R Foundation for Statistical Computing.
+\url{https://www.R-project.org/}.
 
 \bibitem[\citeproctext]{ref-samet2000}
 Samet, Jonathan M., Francesca Dominici, Frank C. Curriero, Ivan Coursac,
