--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,23 @@
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2025},
+    url = {https://www.R-project.org/},
+  }
+
+@Manual{Allaire_Quarto_2022,
+  author = {Allaire, J. J. and Teague, C. and Scheidegger, C. and Xie, Y. and Dervieux, C.},
+  doi = {10.5281/zenodo.5960048},
+  month = jan,
+  title = {{Quarto}},
+  url = {https://github.com/quarto-dev/quarto-cli},
+  version = {1.2},
+  year = {2022}
+}
+
+
 @techreport{APHENA,
   author       = {Katsouyanni, Klea and Samet, Jonathan M. and Anderson, H. Ross and Atkinson, Richard and Le Tertre, Alain and Medina, Sylvia and Samoli, Evangelia and Touloumi, Giota and Burnett, Richard T. and Krewski, Daniel and Ramsay, Tim and Dominici, Francesca and Peng, Roger D. and Schwartz, Joel and Zanobetti, Antonella},
   title        = {Air Pollution and Health: {A} European and North American Approach (APHENA)},
